src/components/inputs/editTodo.css
.edits {
  height: 100vh;
  width: 100vw;
  z-index: 10;
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(180, 180, 180, 0.397);
}

.editInputs {
  z-index: 20;
  padding: 20px;
  background-color: white;
  border: 2px solid black;
  border-radius: 5px;
  height: 250px;
  width: 500px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  font-size: 1.1rem;
}

.editInputs button {
  padding: 5px;
  width: 80px;
}

#editName,
#editDesc {
  margin-bottom: 10px;
  border: 1px solid black;
  border-radius: 2px;
  padding: 5px;
  font-size: 0.8rem;
}

#editName {
  width: 100%;
}

#editDesc {
  height: 80px;
  width: 100%;
}

#editAccept {
  margin-left: auto;
}

.newInputs {
  margin-left: 30px;
  padding: 10px;
  width: min(500px, 100%);
}

.newName,
.newDesc {
  border: 1px solid grey;
  border-radius: 3px;
  padding: 5px;
}

.newName {
  width: 100%;
  font-size: 1rem;
  margin-bottom: 10px;
}

.newDesc {
  display: block;
  width: 100%;
  height: 100px;
  font-size: 1rem;
  margin-bottom: 10px;
}

.newDate {
  padding: 3px;
  font-size: 0.9rem;
  display: flex;
  align-items: center;
}

.newInputBottom {
  display: flex;
  align-items: center;
}

.confirmNew,
.cancelNew {
  font-size: 0.9rem;
}

.confirmNew {
  margin-left: auto;
  margin-right: 10px;
}

